Fix sort icons visibility when column is in active

--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -651,6 +651,7 @@ $datagrid-list-header-color: $theme-color-palette-graphite-60;
 $datagrid-list-header-hover-color: $theme-color-palette-graphite-20;
 $datagrid-list-row-hover-color: transparent;
 $datagrid-list-sort-icon-color: $theme-color-brand-secondary-base;
+$datagrid-list-alt-sorted-icon-color: $theme-color-palette-graphite-40;
 $datagrid-list-sort-icon-hover-color: $theme-color-palette-graphite-50;
 $datagrid-header-focus-bg-color: $datagrid-header-bg-color;
 $datagrid-header-focus-border-color: $theme-color-palette-white;
