--- a/src/themes/theme-soho-contrast.scss
+++ b/src/themes/theme-soho-contrast.scss
@@ -535,6 +535,7 @@ $datagrid-header-hover-color: $theme-color-palette-graphite-100;
 $datagrid-header-active-color: $theme-color-palette-graphite-80;
 $datagrid-header-checkbox-border-color: $theme-color-palette-graphite-50;
 $datagrid-sort-icon-color: $theme-color-brand-secondary-alt;
+$datagrid-list-alt-sorted-icon-color: $theme-color-palette-graphite-40;
 $datagrid-sort-icon-sorted-color: $theme-color-palette-white;
 $datagrid-required-icon-color: $theme-color-palette-white;
 
@@ -564,7 +565,8 @@ $datagrid-list-header-border-color: transparent;
 $datagrid-list-header-color: $theme-color-palette-graphite-100;
 $datagrid-list-header-hover-color: $theme-color-brand-secondary-alt;
 $datagrid-list-row-hover-color: transparent;
-$datagrid-list-sort-icon-color: $theme-color-brand-secondary-alt;
+$datagrid-list-sort-icon-color: $theme-color-palette-graphite-50;
+$datagrid-list-alt-sorted-icon-color: $theme-color-palette-graphite-50;
 $datagrid-list-sort-icon-hover-color: $theme-color-palette-graphite-60;
 $datagrid-header-focus-bg-color: $theme-color-palette-graphite-80;
 $datagrid-header-focus-border-color: $theme-color-palette-white;
