--- a/src/themes/theme-soho-dark.scss
+++ b/src/themes/theme-soho-dark.scss
@@ -520,6 +520,7 @@ $datagrid-header-hover-color: $theme-color-palette-slate-20;
 $datagrid-header-active-color: $theme-color-palette-slate-40;
 $datagrid-header-checkbox-border-color: $theme-color-palette-slate-90;
 $datagrid-sort-icon-color: $theme-color-palette-slate-40;
+$datagrid-list-alt-sorted-icon-color: $theme-color-palette-slate-40;
 $datagrid-sort-icon-sorted-color: $theme-color-palette-slate-100;
 $datagrid-required-icon-color: $theme-color-palette-slate-100;
 
