--- a/src/themes/theme-uplift-contrast.scss
+++ b/src/themes/theme-uplift-contrast.scss
@@ -540,6 +540,7 @@ $datagrid-header-hover-color: $theme-color-palette-graphite-100;
 $datagrid-header-active-color: $theme-color-palette-graphite-80;
 $datagrid-header-checkbox-border-color: $theme-color-palette-graphite-50;
 $datagrid-sort-icon-color: $theme-color-palette-graphite-40;
+$datagrid-list-alt-sorted-icon-color: $theme-color-palette-graphite-50;
 $datagrid-sort-icon-sorted-color: $theme-color-palette-white;
 $datagrid-required-icon-color: $theme-color-palette-white;
 
